added css styles and updated some of the html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
 
     <body>
         <header>
-            <h1>Made by Stephen Merki</h1>
+            <h1>Made by: Stephen Merki</h1>
+            <h1 class="title">Code Quiz</h1>
         </header>
 
         <section class="main" id="main">
             <section class="scoreBoard" id="scoreBoard">
                 <h1>Top Scores</h1>
-                <ul>
-
-                </ul>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
             </section>
 
             <section class="quiz" id="quiz">
                 <section class="question" id="question">
-
+                    <h1>This is a question</h1>
                 </section>
                 <section class="answer" id="answer">
 
