set a reset scores button and fixed button multiple click bug

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li id="ninethPlace"></li>
                     <li id="tenthPlace"></li>
                 </ul>
+                <button class="scoreReset" id="scoreReset">Reset Scores</button>
             </section>
 
             <section class="quiz" id="quiz">
