users can now add inituals before their score

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                     <button class="answerBtns" id="answerThree"></button>
                     <button class="answerBtns" id="answerFour"></button>
                 </section>
+                <section class="prompt" id="prompt">
+                    <p>Your score is: <span id="displayScore"></span></p>
+                    <label for="initials">Enter initials</label>
+                    <input name="initials" class="initials" type="text" id="initials" maxlength="2"><br>
+                    <button class="submitInitials" id="submitInitials">Submit</button>
+                </section>
             </section>
 
         </section>
