improved display for small screens and added documentation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
         <section class="main" id="main">
             <section class="scoreBoard" id="scoreBoard">
+                <!-- Populated li in HTML instead of JavaScript
+                    Chose to do this to help build the border between the scoreboard and the quiz 
+                -->
                 <h1>Top Scores</h1>
                 <ul>
                     <li id="firstPlace"></li>
@@ -50,7 +53,6 @@
                     <button class="submitInitials" id="submitInitials">Submit</button>
                 </section>
             </section>
-
         </section>
         <script type="text/javascript" src="./assets/js/script.js"></script>
     </body>
