added a correct and wrong textcontent to give the user more feedback on their answers

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <input name="initials" class="initials" type="text" id="initials" maxlength="2"><br>
                     <button class="submitInitials" id="submitInitials">Submit</button>
                 </section>
+                <section class="response" id="response"></section>
             </section>
         </section>
         <script type="text/javascript" src="./assets/js/script.js"></script>
